Fixed the heading text to enable word-wrap on desktop view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ body {
 }
 .btn-cta {
   right: 2rem;
-  top: 1.5rem;
+  top: 2rem;
   position: absolute;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
@@ -223,7 +223,7 @@ body {
     position: relative;
   }
   .navbar__logo {
-    margin: 2rem 0 0 3rem;
+    margin: 3rem 0 0 7rem;
     block-size: 1.5rem;
   }
 
@@ -243,16 +243,17 @@ body {
     color: hsl(192deg, 100%, 9%);
     font-weight: 500;
     text-align: left;
+    font-size: 2em;
     line-height: 1.5;
     font-family: "Poppins", sans-serif;
     margin-block-end: 1.5rem;
-    padding-right: 15em;
+    padding-right: 11em;
   }
   .hero__description {
     margin-block-end: 2em;
     inline-size: 76%;
     text-align: left;
-    padding-inline: 3.5em;
+    padding-inline: 4em;
     font-weight: 500;
     color: hsl(192deg, 100%, 9%);
     font-family: "Open Sans", sans-serif;
@@ -261,10 +262,10 @@ body {
   .btn-get-started {
     background-color: hsl(322deg, 100%, 66%);
     padding-inline: 3rem;
-    padding-block: 0.9rem;
+    padding-block: 1rem;
     border-radius: 2rem;
-    font-size: 0.9rem;
-    margin-inline: 3rem;
+    font-size: 0.8rem;
+    margin-inline: 4rem;
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
     color: white;
